# MercadoDoBairro

./: CMakeLists.txt  README.md
Source/: AlterarDadosCliente.c  AlterarDadosProduto.c  CadastrarCliente.c  CadastrarProduto.c  CadastrarProdutoTeste.c  CadastrarProdutos2.c  CadastrarVenda.c  ClientesMais1000Pontos.c  ComprasCliente.c  EstoqueBaixo.c  EstoquePorSetor.c  Funcoes.h  Idade.c  ImprimirEstoqueProdutos.c  LimpaTela.c  MenuClientes.c  MenuPrincipal.c  MenuProdutos.c  MenuVendas.c  QuantidadeClientesIdadeEntre18E25.c  Registros.h  Teste.c  main.c
Source/Arquivos/: Produtos.csv
